--- a/index.html
+++ b/index.html
@@ -812,18 +812,21 @@
 </head>
 
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-200">
-    <div class="min-h-screen">
+    <div class="min-h-screen flex flex-col">
         <!-- 顶部导航栏 -->
-        <nav class="bg-white dark:bg-gray-800 shadow-sm">
+        <nav class="bg-white dark:bg-gray-800 shadow-sm sticky top-0 z-50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between h-16">
                     <div class="flex items-center">
-                        <h1 class="text-xl font-semibold">A股量化分析系统</h1>
+                        <h1 class="text-xl font-semibold bg-gradient-to-r from-primary-600 to-primary-400 bg-clip-text text-transparent">
+                            量化分析系统
+                        </h1>
                     </div>
                     <div class="flex items-center space-x-4">
-                        <button id="themeToggle" class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
-                            <i class="fas fa-moon dark:hidden"></i>
-                            <i class="fas fa-sun hidden dark:block"></i>
+                        <button id="themeToggle" 
+                            class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors duration-200">
+                            <i class="fas fa-moon dark:hidden text-gray-600"></i>
+                            <i class="fas fa-sun hidden dark:block text-yellow-400"></i>
                         </button>
                     </div>
                 </div>
@@ -831,34 +834,36 @@
         </nav>
 
         <!-- 主要内容区域 -->
-        <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <main class="flex-grow max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
             <!-- 搜索区域 -->
-            <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm p-6 mb-6 animate-fade-in">
+            <div class="bg-white dark:bg-gray-800 rounded-xl shadow-sm p-6 mb-6 animate-fade-in card-hover">
                 <div class="flex flex-col sm:flex-row gap-4 items-center">
-                    <input type="text" id="stockCode"
-                        class="flex-1 px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-700"
-                        placeholder="输入股票代码（如：600519）" maxlength="6">
-                    <div class="flex items-center gap-2">
+                    <div class="flex-1 w-full">
+                        <input type="text" id="stockCode"
+                            class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-700 transition-all duration-200"
+                            placeholder="输入股票代码（如：600519）" maxlength="6">
+                    </div>
+                    <div class="flex items-center gap-2 w-full sm:w-auto">
                         <select id="historyStocks"
-                            class="px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-700">
+                            class="w-full sm:w-auto px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-700 transition-all duration-200">
                             <option value="">历史记录</option>
                         </select>
                         <button id="deleteHistory"
-                            class="hidden px-3 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-colors">
+                            class="hidden px-3 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-colors btn-hover">
                             <i class="fas fa-trash"></i>
                         </button>
                     </div>
                     <button id="searchBtn"
-                        class="px-6 py-2 bg-primary-600 text-white rounded-lg hover:bg-primary-700 transition-colors flex items-center justify-center min-w-[100px]">
+                        class="w-full sm:w-auto px-6 py-2 bg-primary-600 text-white rounded-lg hover:bg-primary-700 transition-colors btn-hover flex items-center justify-center min-w-[100px]">
                         <span id="searchText">查询</span>
                         <span id="searchSpinner" class="hidden ml-2">
                             <i class="fas fa-spinner fa-spin"></i>
                         </span>
                     </button>
-                    <div class="flex items-center gap-2">
-                        <label class="text-sm text-gray-600 dark:text-gray-400">刷新间隔：</label>
+                    <div class="flex items-center gap-2 w-full sm:w-auto">
+                        <label class="text-sm text-gray-600 dark:text-gray-400 whitespace-nowrap">刷新间隔：</label>
                         <select id="refreshInterval"
-                            class="px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-700">
+                            class="w-full sm:w-auto px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-700 transition-all duration-200">
                             <option value="0">手动刷新</option>
                             <option value="3">3秒</option>
                             <option value="5" selected>5秒</option>
@@ -873,8 +878,8 @@
             <!-- 股票信息卡片 -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
                 <!-- 基本信息卡片 -->
-                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm p-6 animate-fade-in">
-                    <h3 class="text-lg font-semibold mb-4">基本信息</h3>
+                <div class="bg-white dark:bg-gray-800 rounded-xl shadow-sm p-6 animate-fade-in card-hover">
+                    <h3 class="text-lg font-semibold mb-4 text-gray-800 dark:text-gray-200">基本信息</h3>
                     <div class="space-y-3">
                         <div class="flex justify-between">
                             <span class="text-gray-600 dark:text-gray-400">股票代码：</span>
@@ -912,8 +917,8 @@
                 </div>
 
                 <!-- 量化分析卡片 -->
-                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm p-6 animate-fade-in">
-                    <h3 class="text-lg font-semibold mb-4">量化分析</h3>
+                <div class="bg-white dark:bg-gray-800 rounded-xl shadow-sm p-6 animate-fade-in card-hover">
+                    <h3 class="text-lg font-semibold mb-4 text-gray-800 dark:text-gray-200">量化分析</h3>
                     <div class="space-y-3">
                         <div class="flex justify-between">
                             <span class="text-gray-600 dark:text-gray-400">趋势判断：</span>
@@ -935,7 +940,7 @@
             </div>
 
             <!-- 图表区域 -->
-            <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm p-6 animate-fade-in">
+            <div class="bg-white dark:bg-gray-800 rounded-xl shadow-sm p-6 animate-fade-in card-hover">
                 <div id="chart" class="h-[500px]"></div>
                 <div id="lastUpdate" class="text-sm text-gray-500 dark:text-gray-400 mt-2 text-right"></div>
             </div>
@@ -946,12 +951,16 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <div class="text-sm text-gray-500 dark:text-gray-400">
-                        © 2024 A股量化分析系统. All rights reserved.
+                        © 2024 量化分析系统. All rights reserved.
                     </div>
                     <div class="flex items-center space-x-4 mt-4 md:mt-0">
                         <span class="text-sm text-gray-500 dark:text-gray-400">作者：</span>
+                        <a href="https://twitter.com/your_twitter" target="_blank"
+                            class="text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300 transition-colors">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                         <a href="https://github.com/your_github" target="_blank"
-                            class="text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300">
+                            class="text-primary-600 hover:text-primary-700 dark:text-primary-400 dark:hover:text-primary-300 transition-colors">
                             <i class="fab fa-github"></i>
                         </a>
                     </div>
