--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <div class="text-sm text-gray-500 dark:text-gray-400">
-                        © 2024 量化分析系统. All rights reserved.
+                        © 2024 量化模拟分析. All rights reserved.
                     </div>
                     <div class="flex items-center space-x-4 mt-4 md:mt-0">
                         <span class="text-sm text-gray-500 dark:text-gray-400">作者：</span>
